--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React-Learning</title>
-    <link rel="stylesheet" href="@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');">
+    <!-- <link rel="stylesheet" href="@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');">
     <link
     rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-pzjw8f+ua7Kw1TIqjQXhI6S+CSlnOVGyj/cMaYlzh/xWiob6+2t47kYbxAcQVoq/"
     crossorigin="anonymous"
-  />
+  /> -->
   </head>
   <body>
     <div id="root"></div>
